asm/y.output

state 0
	$accept: .input $end 
	input: .    (1)

	.  reduce 1 (src line 43)

	input  goto 1

state 1
	$accept:  input.$end 
	input:  input.NEWLINE 
	input:  input.line NEWLINE 

	$end  accept
	NEWLINE  shift 2
	LABEL  shift 6
	IDENT  shift 7
	ORG  shift 8
	WORDS  shift 9
	.  error

	line  goto 3
	label_line  goto 4
	non_label  goto 5

state 2
	input:  input NEWLINE.    (2)

	.  reduce 2 (src line 44)


state 3
	input:  input line.NEWLINE 

	NEWLINE  shift 10
	.  error


state 4
	line:  label_line.    (4)
	line:  label_line.non_label 

	IDENT  shift 7
	ORG  shift 8
	WORDS  shift 9
	.  reduce 4 (src line 48)

	non_label  goto 11

state 5
	line:  non_label.    (5)

	.  reduce 5 (src line 49)


state 6
	label_line:  LABEL.    (7)

	.  reduce 7 (src line 53)


state 7
	non_label:  IDENT.    (8)
	non_label:  IDENT.IDENT 
	non_label:  IDENT.NUM 

	NUM  shift 13
	IDENT  shift 12
	.  reduce 8 (src line 56)


state 8
	non_label:  ORG.NUM 

	NUM  shift 14
	.  error


state 9
	non_label:  WORDS.nums 
	nums: .    (13)

	.  reduce 13 (src line 63)

	nums  goto 15

state 10
	input:  input line NEWLINE.    (3)

	.  reduce 3 (src line 45)


state 11
	line:  label_line non_label.    (6)

	.  reduce 6 (src line 50)


state 12
	non_label:  IDENT IDENT.    (9)

	.  reduce 9 (src line 57)


state 13
	non_label:  IDENT NUM.    (10)

	.  reduce 10 (src line 58)


state 14
	non_label:  ORG NUM.    (11)

	.  reduce 11 (src line 59)


state 15
	non_label:  WORDS nums.    (12)
	nums:  nums.NUM 

	NUM  shift 16
	.  reduce 12 (src line 60)


state 16
	nums:  nums NUM.    (14)

	.  reduce 14 (src line 64)


10 terminals, 6 nonterminals
15 grammar rules, 17/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 5/30000
0 extra closures
13 shift entries, 1 exceptions
6 goto entries
0 entries saved by goto default
Optimizer space used: output 19/30000
19 table entries, 0 zero
maximum spread: 9, maximum offset: 7
